--- a/data/projects.json
+++ b/data/projects.json
@@ -119,5 +119,115 @@
         "src": "img/screenshot/HideMyFile/7.png"
       }
     ]
+  },
+  {
+    "name": "MusiP",
+    "description": "The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...",
+    "cover": "img/screenshot/MusiP/cover.png",
+    "type": "android",
+    "images": [
+      {
+        "src": "img/screenshot/MusiP/1.png"
+      },
+      {
+        "src": "img/screenshot/MusiP/2.png"
+      },
+      {
+        "src": "img/screenshot/MusiP/3.png"
+      },
+      {
+        "src": "img/screenshot/MusiP/4.png"
+      }
+    ]
+  },
+  {
+    "name": "Sandormoh",
+    "description": "The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...",
+    "cover": "img/screenshot/Sando/cover.png",
+    "type": "android",
+    "images": [
+      {
+        "src": "img/screenshot/Sando/1.png"
+      },
+      {
+        "src": "img/screenshot/Sando/2.png"
+      },
+      {
+        "src": "img/screenshot/Sando/3.png"
+      },
+      {
+        "src": "img/screenshot/Sando/4.png"
+      },
+      {
+        "src": "img/screenshot/Sando/5.png"
+      },
+      {
+        "src": "img/screenshot/Sando/6.png"
+      },
+      {
+        "src": "img/screenshot/Sando/7.png"
+      },
+      {
+        "src": "img/screenshot/Sando/8.png"
+      }
+    ]
+  },
+  {
+    "name": "TicketSales",
+    "description": "The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...",
+    "cover": "img/screenshot/TicketSales/cover.png",
+    "type": "web",
+    "images": [
+      {
+        "src": "img/screenshot/TicketSales/1.png"
+      },
+      {
+        "src": "img/screenshot/TicketSales/2.png"
+      },
+      {
+        "src": "img/screenshot/TicketSales/3.png"
+      },
+      {
+        "src": "img/screenshot/TicketSales/4.png"
+      },
+      {
+        "src": "img/screenshot/TicketSales/5.png"
+      },
+      {
+        "src": "img/screenshot/TicketSales/6.png"
+      }
+    ]
+  },
+  {
+    "name": "NAUTests",
+    "description": "The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...",
+    "cover": "img/screenshot/NAUTests/cover.png",
+    "type": "web",
+    "images": [
+      {
+        "src": "img/screenshot/NAUTests/1.png"
+      },
+      {
+        "src": "img/screenshot/NAUTests/2.png"
+      },
+      {
+        "src": "img/screenshot/NAUTests/3.png"
+      },
+      {
+        "src": "img/screenshot/NAUTests/4.png"
+      },
+      {
+        "src": "img/screenshot/NAUTests/5.png"
+      },
+      {
+        "src": "img/screenshot/NAUTests/6.png"
+      },
+      {
+        "src": "img/screenshot/NAUTests/7.png"
+      },
+      {
+        "src": "img/screenshot/NAUTests/8.png"
+      }
+    ]
   }
 ]
