--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,7 @@
   {
     "name": "NAU Guide",
     "description": "The titles of Washed Out's breakthrough song and the first single from Paracosm share the two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...",
-    "cover": "img/nau_guide_cover.png",
+    "cover": "img/screenshot/NauGuide/cover.png",
     "type": "android",
     "images": [
       {
@@ -68,6 +68,30 @@
       },
       {
         "src": "img/screenshot/Farmatica-Android/6.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Android/7.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Android/8.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Android/9.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Android/10.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Android/11.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Android/12.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Android/13.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Android/14.png"
       }
     ]
   },
@@ -88,6 +112,9 @@
       },
       {
         "src": "img/screenshot/Farmatica-Web/4.png"
+      },
+      {
+        "src": "img/screenshot/Farmatica-Web/5.png"
       }
     ]
   },
